--- a/index.html
+++ b/index.html
@@ -218,7 +218,10 @@
         </div>
     </section>
     <script>
-        siteWelcome.classList.remove('active')
+        setTimeout(function(){
+            siteWelcome.classList.remove('active')
+
+        },3000)
     </script>
     </body>
 </html>
