--- a/index.html
+++ b/index.html
@@ -45,7 +45,13 @@
                     <!-- list -->
                     <li><a href="#">关于</a></li>
                     <li><a href="#">技能</a></li>
-                    <li><a href="#">作品</a></li>
+                    <li class="menuTigger"><a href="#">作品</a>
+                        <ul class="subMenu">
+                            <li>作品1</li>
+                            <li>作品2</li>
+                            <li>作品3</li>
+                        </ul>
+                    </li>
                     <li><a href="#">博客</a></li>
                     <li><a href="#">日历</a></li>
                     <li><a href="#">联系方式</a></li>
@@ -227,6 +233,15 @@
                 topNavBar.classList.add('sticky')
             }else{
                 topNavBar.classList.remove('sticky')
+            }
+        }
+        let liTags = document.getElementsByClassName('menuTigger')
+        for(let i=0; i<liTags.length;i++){
+            liTags[i].onmouseenter =function(x){
+                x.currentTarget.classList.add('active')
+            }
+            liTags[i].onmouseleave = function(x){
+                x.currentTarget.classList.remove('active')
             }
         }
     </script>
