--- a/index.html
+++ b/index.html
@@ -8,25 +8,16 @@
     <link rel="stylesheet" href="./cv.css">
     <link rel="stylesheet" href="./loading.css">
     <link rel=icon href=./favicon.ico type=image/x-icon>
-    <!-- <style>
-        body{
-             background-color: #ddd;
-        }
-        h1{
-            text-align: center;
-            color: red;
-        }
-    </style> -->
+
     <style type="text/css">
         .icon {
-            width: 1em;
-            height: 1em;
-            vertical-align: -0.15em;
-            fill: currentColor;
-            overflow: hidden;
+           width: 1em; height: 1em;
+           vertical-align: -0.15em;
+           fill: currentColor;
+           overflow: hidden;
         }
     </style>
-    <script src="//at.alicdn.com/t/font_8d5l8fzk5b87iudi.js"></script>
+    <script src="./icon.js"></script>
 </head>
 <body>
     <div id="siteWelcome" class="site-welcome active">
@@ -70,7 +61,7 @@
     </div>
     <!-- 主要内容 class取名直接描述是声明东西-->
     <main>
-        <div id="siteAbout"class="userCard">
+        <div data-x id="siteAbout"class="userCard">
         <div class="pictureAndText clearfix">
             <!-- 头像图片 -->
             <div class="picture">
@@ -139,7 +130,7 @@
 
     </main>
 
-    <section id="siteSkills" class="skills">
+    <section data-x id="siteSkills" class="skills">
         <h2>技能</h2>
         <ol class="clearfix">
             <li>
@@ -184,7 +175,7 @@
             </li>
         </ol>
     </section>
-    <section id="siteWorks" class="portfolio">
+    <section data-x id="siteWorks" class="portfolio">
         <h2>作品集</h2>
         <nav>
             <ol class="clearfix">
@@ -223,6 +214,8 @@
             </div>
         </div>
     </section>
+    <!-- 引入TWEEN -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tween.js/18.6.4/tween.umd.min.js" integrity="sha512-fJ91rDja9nv9NCUNbvoW69MB1sQlp1d0eJt1NZDJQ1CuwcxReaXUrMCKI23yI9IMnB2hd2fq4PHZZ9UKN/i0mA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script>
         setTimeout(function(){
             siteWelcome.classList.remove('active')
@@ -246,6 +239,13 @@
         }
 
         let aTags = document.querySelectorAll('nav > ul > li > a')
+        // Setup the animation loop.
+        function animate(time) {
+            requestAnimationFrame(animate)
+            TWEEN.update(time)
+        }
+        requestAnimationFrame(animate)
+        
         for(let i=0; i<aTags.length;i++){
             aTags[i].onclick =function(x){
                 // 阻止默认动作 即浏览器锚点 你点击没有反应
@@ -263,23 +263,29 @@
                 // 想在500毫秒 0.5秒内动25次
                 let duration = 500 / n // 多久动一次你
                 // 当前高度也就是在用户点击之前的高度
+                // 起始位置
                 let currentTop = window.scrollY
                 // 用户点击后想要定位到的高度
+                // 终止位置
                 let targetTop = top - 80
-                // 每次动的距离是多少
-                let distance = (targetTop - currentTop) / n
-                let i = 0
-                let id = setInterval(() => {
-                    if(i === n){
-                        window.clearInterval(id)
-                        return
-                    }
-                    i += 1
-                    window.scrollTo(0, currentTop + distance * i)
-
-                }, duration);
+                let s = targetTop - currentTop // 需要滚动的距离
+                let t = Math.abs((s/100)*200) // 每滚动100px需要200毫秒 t是滚动到最终距离的时间
+                // 怕滚动距离太长 滚动时间太长 滚动的速度太慢 所以设定一下滚动时间最大为500毫秒
+                if(t > 500){
+                    t = 500
+                }
+                const coords = {y: currentTop} // Start at (0, 0)
+                const tween = new TWEEN.Tween(coords) // Create a new tween that modifies 'coords'.
+                    .to({y: targetTop}, t) // Move to (300, 200) in 1 second.
+                    .easing(TWEEN.Easing.Quadratic.InOut) // Use an easing function to make the animation smooth.
+                    .onUpdate(() => {
+                        window.scrollTo(0, coords.y)
+                    })
+                    .start() // Start the tween immediately.  
             }
         }   
+
+
     </script>
     </body>
 </html>
